# Automated-data-preprocessing-udf-sql-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  UDF and tables.sql  docker-compose.yml  pyproject.toml  requirements.txt  snowflake_connector.py  split_files.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api_reference.md  models.md  pipeline.md
models/: __init__.py  yelp.py
pipeline/: __init__.py  aggregator.py  cleaner.py  deduplicator.py  exporter.py  joiner.py  normalizer.py  partitioner.py  processor.py  sampler.py  sentiment.py  transformer.py
scripts/: __init__.py  analyze_sentiment.py  benchmark.py  deduplicate.py  generate_report.py  partition_data.py  run_pipeline.py  validate_jsonl.py
tests/: conftest.py  test_aggregator_merge.py  test_aggregator_new.py  test_aggregator_percentile.py  test_analyze_sentiment.py  test_analyze_sentiment_format.py  test_async_timer.py  test_batch_execute.py  test_benchmark.py  test_benchmark_extended.py  test_cache.py  test_cache_extended.py  test_cleaner_extract.py  test_cleaner_new.py  test_conftest_fixtures.py  test_count_lines_extended.py  test_data_quality.py  test_data_quality_extended.py  test_deduplicate_script.py  test_deduplicator.py  test_dict_cache.py  test_edge_cases.py  test_error_messages.py  test_exporter_errors.py  test_file_utils.py  test_generate_report.py  test_generate_report_sections.py  test_hash_utils.py  test_integration.py  test_integration_extended.py  test_integration_pipeline.py  test_joiner.py  test_joiner_extended.py  test_logger.py  test_logger_extended.py  test_logger_json.py  test_memory_metrics.py  test_metrics.py  test_metrics_extended.py  test_metrics_new.py  (+62 more)
utils/: __init__.py  cache.py  file_utils.py  hash_utils.py  logger.py  metrics.py  profiler.py  retry.py  schema_validator.py  text_stats.py  validators.py
