[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-data-preprocessing-udf-sql-pipeline"
version = "1.0.0"
description = "Automated data preprocessing pipeline with UDF SQL functions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "atharvadevne123", email = "devneatharva@gmail.com"}]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
fail_under = 75
