[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-data-preprocessing-udf-sql-pipeline"
version = "1.0.0"
description = "Automated data preprocessing pipeline with UDF SQL functions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "atharvadevne123", email = "devneatharva@gmail.com"}]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
show_error_codes = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py", "scripts/benchmark.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["utils", "scripts"]
